Issue #3680: Reference cycles created through a dict, set or deque iterator did not get collected.